[package]
name = "rasterize"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
raster = { path = "../raster" }
sarus-suite-podman-driver = { path = "../podman-driver" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
